<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/userid"
            android:textColor="@color/gray"
            android:textSize="@dimen/big_textsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colom"
            android:textColor="@color/gray"
            android:textSize="@dimen/big_textsize" />

        <TextView
            android:id="@+id/mTvUserID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="2"
            android:textColor="@color/gray"
            android:textSize="@dimen/big_textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/username"
            android:textColor="@color/gray"
            android:textSize="@dimen/big_textsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colom"
            android:textColor="@color/gray"
            android:textSize="@dimen/big_textsize" />

        <TextView
            android:id="@+id/mTvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="2"
            android:textColor="@color/gray"
            android:textSize="@dimen/big_textsize" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/gray" />

</LinearLayout>