<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:id="@+id/mIvbackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:src="@mipmap/imaginato_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/mTvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/username"
            android:textColor="@color/gray"
            android:textSize="@dimen/medium_textsize" />

        <EditText
            android:id="@+id/mEtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/stock_edit_fild"
            android:inputType="text"
            android:maxLength="30"
            android:paddingStart="@dimen/_5sdp"
            android:singleLine="true"
            android:textSize="@dimen/medium_textsize"
            tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

        <TextView
            android:id="@+id/mTvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/password"
            android:textColor="@color/gray"
            android:textSize="@dimen/medium_textsize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <EditText
                android:id="@+id/mEtPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:background="@drawable/stock_edit_fild"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingStart="@dimen/_5sdp"
                android:singleLine="true"
                android:textSize="@dimen/medium_textsize"
                tools:ignore="Autofill,LabelFor,RtlSymmetry" />

            <ImageView
                android:id="@+id/mIvHide"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:src="@mipmap/ic_hide"
                app:tint="@color/theme"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <TextView
            android:id="@+id/mTvLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/stock_button_theme"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/big_textsize"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>